tests/baselines/reference/jsDeclarationsTypeReferences4.errors.txt
tests/cases/conformance/jsdoc/declarations/index.js(4,18): error TS8006: 'namespace' declarations can only be used in TypeScript files.


==== tests/cases/conformance/jsdoc/declarations/index.js (1 errors) ====
    /// <reference types="node" />
    export const Something = 2; // to show conflict that can occur
    // @ts-ignore
    export namespace A {
                     ~
!!! error TS8006: 'namespace' declarations can only be used in TypeScript files.
        // @ts-ignore
        export namespace B {
            const Something = require("fs").Something;
            const thing = new Something();
            // @ts-ignore
            export { thing };
        }
    }
    
==== tests/cases/conformance/jsdoc/declarations/node_modules/@types/node/index.d.ts (0 errors) ====
    declare module "fs" {
        export class Something {}
    }